aya-parser/src/instructions/snapshots/aya_parser__instructions__mov__tests__mov_lit_mem.snap
---
source: aya-parser/src/instructions/mov.rs
expression: instruction
---
MovLitMem(
    Address(
        "c0d3",
    ),
    HexLiteral(
        "ffe3",
    ),
)
