aya-parser/src/instructions/snapshots/aya_parser__instructions__mov__tests__mov_lit_reg.snap
---
source: aya-parser/src/instructions/mov.rs
expression: instruction
---
MovLitReg(
    Register(
        "r1",
    ),
    HexLiteral(
        "c0d3",
    ),
)
