aya-parser/src/instructions/snapshots/aya_parser__instructions__mov__tests__mov_mem_reg.snap
---
source: aya-parser/src/instructions/mov.rs
expression: instruction
---
MovMemReg(
    Register(
        "r4",
    ),
    Address(
        "c0d3",
    ),
)
