aya-parser/src/instructions/snapshots/aya_parser__instructions__mov__tests__mov_reg_mem.snap
---
source: aya-parser/src/instructions/mov.rs
expression: instruction
---
MovRegMem(
    Address(
        "c0d3",
    ),
    Register(
        "r2",
    ),
)
