aya-parser/src/instructions/snapshots/aya_parser__instructions__mov__tests__mov_reg_ptr_reg.snap
---
source: aya-parser/src/instructions/mov.rs
expression: instruction
---
MovRegPtrReg(
    Register(
        "r3",
    ),
    Register(
        "r4",
    ),
)
