aya-parser/src/instructions/snapshots/aya_parser__instructions__mov__tests__mov_reg_reg.snap
---
source: aya-parser/src/instructions/mov.rs
expression: instruction
---
MovRegReg(
    Register(
        "r1",
    ),
    Register(
        "r2",
    ),
)
